--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
     crossorigin="anonymous">
   </head>
-  <body class="bg-light">
+  <body class="darkmode">
     <div class="container border px-5 ppal">
         <div class="text-center mt-4 py-3">
+            <div>
+                <button type="button" class="btn btn-outline-warning" id="bdark">Dark/Light mode</button><br><br>
+            </div>
             <h1>Calculadora de retención de imp. a las Ganancias</h1>
         </div>
         <div><!-- CONCEPTO -->
@@ -52,5 +55,12 @@
     </div>
     <script src="index.js"></script>  
     <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  </body>
+    <script>
+        const bdark = document.querySelector('#bdark');
+        const body = document.querySelector('body');
+        bdark.addEventListener('click', e =>{
+            body.classList.toggle('darkmode');
+        })    
+    </script>
+    </body>
 </html>
