--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ret Gcias</title>
-   <link rel="shortcut icon" href='https://www.freepik.es/vectores/calculadora-icono' type="image/x-icon">
+   <!-- <link rel="shortcut icon" href='https://www.freepik.es/vectores/calculadora-icono' type="image/x-icon"> -->
     <link rel="stylesheet" href="style.css">
     <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
@@ -31,8 +31,8 @@
         <div class="py-5"><!-- RETENCIONES ANTERIORMENTE? -->
             <h3>¿Hubo retenciones durante el mes?</h3><br>
             <select name="retant" id="retAnt" class="form-select">
-                <option value="si">Si</option>
-                <option value="no">No</option>
+                <option value=1>Si</option>
+                <option value=0>No</option>
             </select>
         </div>
         <div><!-- NETO DEL COMPROBANTE -->
@@ -45,7 +45,7 @@
             <input type="number" class="form-control" id="total">
         </div>
         <div><!-- BOTON CALCULAR RETENCION -->
-            <button class="w-100 btn btn-primary btn-lg" onclick="botRet();">Calcular Retencion</button>
+            <button class="w-100 btn btn-primary btn-lg" id="boton">Calcular Retencion</button>
         </div>
         <div class="py-4"><!-- RESULTADOS -->
             <p class="lead fs-3">La retención es de: <strong><span id="reten"></span></strong></p>
@@ -60,7 +60,7 @@
         <br>
         <br>
     </div>
-    <script src="index.js"></script>  
+    <script src="index.js" type="module"></script>  
     <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script>
         const bdark = document.querySelector('#bdark');
